--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
+    "immer": "^10.0.2",
     "prisma": "^5.2.0",
     "turbo": "^1.10.13"
   }
