--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
@@ -29,6 +30,7 @@
     "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "tw-elements-react": "^1.0.0-alpha1",
