--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-tiny-popover": "^7.2.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "tw-elements-react": "^1.0.0-alpha1",
