--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "^10.4.15",
+    "@uidotdev/usehooks": "^2.3.1",
+    "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.3",
     "ms": "^2.1.3",
     "next": "13.4.19",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "react-tiny-popover": "^7.2.4",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "tw-elements-react": "^1.0.0-alpha1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
