--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
+    "@types/react-color": "^3.0.7",
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.3.1",
     "autoprefixer": "^10.4.16",
@@ -32,6 +33,7 @@
     "next": "13.4.19",
     "postcss": "^8.4.31",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "react-tiny-popover": "^7.2.4",
