--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/ms": "^0.7.31",
     "immer": "^10.0.2",
     "prisma": "^5.2.0",
