--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "react-tiny-popover": "^7.2.4",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/ms": "^0.7.31",
+    "@types/validator": "^13.11.2",
     "immer": "^10.0.2",
     "prisma": "^5.2.0",
     "turbo": "^1.10.13"
