--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
-POSTGRES_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
+POSTGRES_DATABASE=
 POSTGRES_HOST=
 POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
-POSTGRES_PRISMA_URL=
+SUPABASE_POSTGRES_PRISMA_URL=
+POSTGRES_URL=
+SUPABASE_POSTGRES_URL_NON_POOLING=
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+POSTGRES_USER=
+VERCEL=
+VERCEL_ENV=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
