--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "dev": "prisma generate && next dev --experimental-https",
     "build": "prisma generate && prisma db push && prisma db seed && next build",
     "start": "next start",
     "lint": "next lint",
@@ -30,7 +30,8 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.3",
     "ms": "^2.1.3",
-    "next": "13.4.19",
+    "next": "^13.5.4",
+    "next-auth": "^4.23.2",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-color": "^2.19.3",
