--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.33.1",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-color": "^3.0.7",
@@ -29,6 +30,7 @@
     "eslint-config-next": "13.4.19",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.3",
+    "js-cookie": "^3.0.5",
     "ms": "^2.1.3",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
