--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     ],
     "rules": {
         "quotes": ["error", "single"],
-        "semi": "error"
+        "semi": "error",
+        "@next/next/no-img-element": "off"
     }
 }
