--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-color": "^3.0.7",
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.3.1",
+    "@webgpu/types": "^0.1.38",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
