--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@webgpu/types",
+      "./node_modules/@types",
+    ]
   },
   "include": [
     "next-env.d.ts",
