--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@pixi/react": "^7.1.1",
     "@prisma/client": "^5.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.33.1",
@@ -35,6 +36,7 @@
     "ms": "^2.1.3",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
+    "pixi.js": "^7.3.2",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-color": "^2.19.3",
