--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,10 +21,6 @@
         ],
         "semi": "error",
         "@next/next/no-img-element": "off",
-        "no-tabs": "error",
-        "indent": [
-            "error",
-            2
-        ]
+        "no-tabs": "error"
     }
 }
